# CppLocalLlmCodeAssist

./: CMakeLists.txt  Post.md  README.md  r.ps1  t.ps1
include/cppcoder/: ChatServer.h  OllamaClient.h
src/: CMakeLists.txt  ChatServer.cpp  OllamaClient.cpp  main.cpp
tests/: CMakeLists.txt
web/: chat.html  index.html
